Copilot-driven integration

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,35 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
+lib_deps = 
+    sandeepmistry/CAN@^0.3.1
+    bodmer/TFT_eSPI@^2.5.43
+monitor_speed = 115200
+
+; SPIFFS Configuration for Abarth logo storage
+board_build.filesystem = spiffs
+board_build.partitions = default.csv
+
+build_flags = 
+    -D USER_SETUP_LOADED=1
+    -D ILI9488_DRIVER=1
+    
+    ; SPI interface configuration (using pins 31-34 from pinout)
+    -D TFT_MISO=19   ; SPI_MISO (Pin 31)
+    -D TFT_MOSI=23   ; SPI_MOSI (Pin 32)
+    -D TFT_SCLK=18   ; SPI_CLK (Pin 33)
+    -D TFT_CS=15     ; Chip Select (can use SD_CS Pin 34 or LCD_CS Pin 21)
+    -D TFT_DC=2      ; LCD_RS (Pin 19) - Data/Command
+    -D TFT_RST=4     ; LCD_RST (Pin 22) - Reset
+    
+    ; SPI frequency
+    -D SPI_FREQUENCY=27000000
+    
+    ; Font loading options
+    -D LOAD_GLCD=1
+    -D LOAD_FONT2=1
+    -D LOAD_FONT4=1
+
+; Test configuration
+test_framework = unity
+test_build_src = false
