--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "X:/sources/GitHub/Rosalba.Next/.pio/build/nodemcu-32s/firmware.elf",
-            "projectEnvName": "nodemcu-32s",
-            "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/esp32-s3-devkitc-1/firmware.elf",
+            "projectEnvName": "esp32-s3-devkitc-1",
+            "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32s3/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "X:/sources/GitHub/Rosalba.Next/.pio/build/nodemcu-32s/firmware.elf",
-            "projectEnvName": "nodemcu-32s",
-            "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/esp32-s3-devkitc-1/firmware.elf",
+            "projectEnvName": "esp32-s3-devkitc-1",
+            "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32s3/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "X:/sources/GitHub/Rosalba.Next/.pio/build/nodemcu-32s/firmware.elf",
-            "projectEnvName": "nodemcu-32s",
-            "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/esp32-s3-devkitc-1/firmware.elf",
+            "projectEnvName": "esp32-s3-devkitc-1",
+            "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32s3/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
