--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/freenove-FNK0103S/firmware.elf",
-            "projectEnvName": "freenove-FNK0103S",
+            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/esp32-blank/firmware.elf",
+            "projectEnvName": "esp32-blank",
             "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
@@ -25,8 +25,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/freenove-FNK0103S/firmware.elf",
-            "projectEnvName": "freenove-FNK0103S",
+            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/esp32-blank/firmware.elf",
+            "projectEnvName": "esp32-blank",
             "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
@@ -34,8 +34,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/freenove-FNK0103S/firmware.elf",
-            "projectEnvName": "freenove-FNK0103S",
+            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/esp32-blank/firmware.elf",
+            "projectEnvName": "esp32-blank",
             "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
