--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:freenove-FNK0103S]
+[env:esp32-blank]
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_extra_dirs = libs
-lib_deps = 
-	sandeepmistry/CAN@^0.3.1
 monitor_speed = 115200
 build_flags = 
-	-D CAN_SPEED=500000
 	-D CORE_DEBUG_LEVEL=3
 test_framework = unity
