feat: Implement LittleFS support and update file paths for Abarth logo

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ monitor_speed = 115200
 build_flags = 
 	-D CORE_DEBUG_LEVEL=3
 test_framework = unity
+board_build.filesystem = littlefs
+board_build.littlefs_dir = data
