feat: Implement LittleFS support and XML-based UI loading (note: image load not working yet)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -48,6 +48,54 @@
 				"$platformio"
 			],
 			"group": "build"
+		},
+		{
+			"label": "PlatformIO: Upload File System Image",
+			"type": "shell",
+			"command": "C:\\Users\\pmarc\\.platformio\\penv\\Scripts\\platformio.exe",
+			"args": [
+				"run",
+				"--target",
+				"uploadfs"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "PlatformIO: Upload File System Image (Retry)",
+			"type": "shell",
+			"command": "C:\\Users\\pmarc\\.platformio\\penv\\Scripts\\platformio.exe",
+			"args": [
+				"run",
+				"--target",
+				"uploadfs"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "PlatformIO: Upload Firmware",
+			"type": "shell",
+			"command": "C:\\Users\\pmarc\\.platformio\\penv\\Scripts\\platformio.exe",
+			"args": [
+				"run",
+				"--target",
+				"upload"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "PlatformIO: Upload File System Image",
+			"type": "shell",
+			"command": "C:\\Users\\pmarc\\.platformio\\penv\\Scripts\\platformio.exe",
+			"args": [
+				"run",
+				"--target",
+				"uploadfs"
+			],
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
