--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,8 @@ monitor_speed = 115200
 build_flags = 
 	-D CORE_DEBUG_LEVEL=3
 test_framework = unity
+lib_deps = sepastian/tinyxml2@^11.0.0
+
+; LittleFS settings
+board_build.filesystem = littlefs
+board_build.littlefs_size = 0x100000 ; 1MB, adjust as needed
