--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "X:/sources/GitHub/Rosalba.Next/.pio/build/esp32-blank/firmware.elf",
+            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/esp32-blank/firmware.elf",
             "projectEnvName": "esp32-blank",
             "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -25,7 +25,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "X:/sources/GitHub/Rosalba.Next/.pio/build/esp32-blank/firmware.elf",
+            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/esp32-blank/firmware.elf",
             "projectEnvName": "esp32-blank",
             "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart"
@@ -34,7 +34,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "X:/sources/GitHub/Rosalba.Next/.pio/build/esp32-blank/firmware.elf",
+            "executable": "X:/Sources/GitHub/Rosalba.Next/.pio/build/esp32-blank/firmware.elf",
             "projectEnvName": "esp32-blank",
             "toolchainBinDir": "C:/Users/pmarc/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
